// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatPage > Snapshots > matches snapshot - default state with rooms 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain flex flex-col"
      >
        <div
          class="flex-1 divide-y divide-gray-200 dark:divide-gray-700"
        >
          <button
            class="w-full p-3 md:p-4 text-left hover:bg-gray-50 dark:hover:bg-gray-700/50 active:bg-gray-100 dark:active:bg-gray-700 transition-colors touch-manipulation border-l-3 border-l-transparent"
            type="button"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="relative "
              >
                <div
                  class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                >
                  O
                </div>
                <span
                  class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                  title="online"
                />
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center justify-between gap-2"
                >
                  <span
                    class="font-semibold text-gray-900 dark:text-white truncate text-sm md:text-base"
                  >
                    otheruser
                  </span>
                  <span
                    class="text-xs text-gray-500 dark:text-gray-400 flex-shrink-0"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="flex items-center justify-between gap-2 mt-0.5"
                >
                  <p
                    class="text-xs md:text-sm text-gray-600 dark:text-gray-400 truncate"
                  >
                    <span
                      class="font-medium"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="px-2 py-0.5 bg-blue-600 text-white text-xs font-medium rounded-full flex-shrink-0 min-w-[1.25rem] text-center"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="flex-1 flex items-center justify-center p-6"
        >
          <div
            class="text-center max-w-sm"
          >
            <div
              class="w-20 h-20 md:w-24 md:h-24 bg-gray-200 dark:bg-gray-800 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comment-dots text-3xl md:text-4xl text-gray-400 dark:text-gray-600"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-600 dark:text-gray-400 mb-2"
            >
              Select a chat to start messaging
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-500"
            >
              Select a conversation from the list or start a new chat
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - disconnected state 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="modern-stat-badge"
            style="background: rgba(239, 68, 68, 0.1); border-color: rgba(239, 68, 68, 0.2);"
          >
            <i
              class="fas fa-exclamation-triangle text-red-500 mr-2"
            />
            <span
              class="hidden sm:inline"
            >
              Disconnected
            </span>
            <span
              class="sm:hidden"
            >
              Offline
            </span>
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain flex flex-col"
      >
        <div
          class="flex-1 divide-y divide-gray-200 dark:divide-gray-700"
        >
          <button
            class="w-full p-3 md:p-4 text-left hover:bg-gray-50 dark:hover:bg-gray-700/50 active:bg-gray-100 dark:active:bg-gray-700 transition-colors touch-manipulation border-l-3 border-l-transparent"
            type="button"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="relative "
              >
                <div
                  class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                >
                  O
                </div>
                <span
                  class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                  title="online"
                />
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center justify-between gap-2"
                >
                  <span
                    class="font-semibold text-gray-900 dark:text-white truncate text-sm md:text-base"
                  >
                    otheruser
                  </span>
                  <span
                    class="text-xs text-gray-500 dark:text-gray-400 flex-shrink-0"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="flex items-center justify-between gap-2 mt-0.5"
                >
                  <p
                    class="text-xs md:text-sm text-gray-600 dark:text-gray-400 truncate"
                  >
                    <span
                      class="font-medium"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="px-2 py-0.5 bg-blue-600 text-white text-xs font-medium rounded-full flex-shrink-0 min-w-[1.25rem] text-center"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="flex-1 flex items-center justify-center p-6"
        >
          <div
            class="text-center max-w-sm"
          >
            <div
              class="w-20 h-20 md:w-24 md:h-24 bg-gray-200 dark:bg-gray-800 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comment-dots text-3xl md:text-4xl text-gray-400 dark:text-gray-600"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-600 dark:text-gray-400 mb-2"
            >
              Select a chat to start messaging
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-500"
            >
              Select a conversation from the list or start a new chat
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - empty state (no rooms) 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain flex flex-col"
      >
        <div
          class="flex-1 flex items-center justify-center p-6 md:p-8 text-center"
        >
          <div
            class="max-w-xs"
          >
            <div
              class="w-16 h-16 md:w-20 md:h-20 bg-gray-100 dark:bg-gray-700 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comments text-2xl md:text-3xl text-gray-400 dark:text-gray-500"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-700 dark:text-gray-300 mb-2"
            >
              No chats yet
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-400"
            >
              Start a new chat to begin
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="flex-1 flex items-center justify-center p-6"
        >
          <div
            class="text-center max-w-sm"
          >
            <div
              class="w-20 h-20 md:w-24 md:h-24 bg-gray-200 dark:bg-gray-800 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comment-dots text-3xl md:text-4xl text-gray-400 dark:text-gray-600"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-600 dark:text-gray-400 mb-2"
            >
              Select a chat to start messaging
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-500"
            >
              Select a conversation from the list or start a new chat
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - loading state 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain flex flex-col"
      >
        <div
          class="flex-1 flex items-center justify-center p-4 text-center text-gray-500"
        >
          <div>
            <i
              class="fas fa-spinner fa-spin text-2xl mb-2 text-blue-500"
            />
            <p
              class="text-sm md:text-base"
            >
              Loading chats...
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="flex-1 flex items-center justify-center p-6"
        >
          <div
            class="text-center max-w-sm"
          >
            <div
              class="w-20 h-20 md:w-24 md:h-24 bg-gray-200 dark:bg-gray-800 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comment-dots text-3xl md:text-4xl text-gray-400 dark:text-gray-600"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-600 dark:text-gray-400 mb-2"
            >
              Select a chat to start messaging
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-500"
            >
              Select a conversation from the list or start a new chat
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - with active chat room 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain hidden md:flex md:flex-col"
      >
        <div
          class="flex-1 divide-y divide-gray-200 dark:divide-gray-700"
        >
          <button
            class="w-full p-3 md:p-4 text-left hover:bg-gray-50 dark:hover:bg-gray-700/50 active:bg-gray-100 dark:active:bg-gray-700 transition-colors touch-manipulation bg-blue-50 dark:bg-blue-900/30 border-l-3 border-l-blue-500"
            type="button"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="relative "
              >
                <div
                  class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                >
                  O
                </div>
                <span
                  class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                  title="online"
                />
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center justify-between gap-2"
                >
                  <span
                    class="font-semibold text-gray-900 dark:text-white truncate text-sm md:text-base"
                  >
                    otheruser
                  </span>
                  <span
                    class="text-xs text-gray-500 dark:text-gray-400 flex-shrink-0"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="flex items-center justify-between gap-2 mt-0.5"
                >
                  <p
                    class="text-xs md:text-sm text-gray-600 dark:text-gray-400 truncate"
                  >
                    <span
                      class="font-medium"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="px-2 py-0.5 bg-blue-600 text-white text-xs font-medium rounded-full flex-shrink-0 min-w-[1.25rem] text-center"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 flex"
      >
        <div
          class="bg-white dark:bg-gray-800 border-b border-gray-200 dark:border-gray-700 p-3 md:p-4 flex-shrink-0 safe-area-inset-top"
        >
          <div
            class="flex items-center gap-2 md:gap-3 mb-2 md:mb-3"
          >
            <button
              aria-label="Back to chat list"
              class="md:hidden w-9 h-9 flex items-center justify-center text-gray-600 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white rounded-full hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 transition-colors flex-shrink-0 touch-manipulation"
              title="Back"
              type="button"
            >
              <i
                class="fas fa-arrow-left text-lg"
              />
            </button>
            <div
              class="flex-1 min-w-0"
            >
              <h2
                class="font-semibold text-gray-900 dark:text-white truncate text-base md:text-lg"
              >
                Chat with otheruser
              </h2>
            </div>
            <button
              aria-label="Delete chat"
              class="w-9 h-9 flex items-center justify-center text-red-600 hover:text-red-700 hover:bg-red-50 dark:hover:bg-red-900/30 active:bg-red-100 dark:active:bg-red-900/50 rounded-full transition-colors flex-shrink-0 touch-manipulation"
              title="Delete chat"
              type="button"
            >
              <i
                class="fas fa-trash text-sm"
              />
            </button>
          </div>
          <div
            class="flex gap-2"
          >
            <div
              class="flex-1 relative"
            >
              <i
                class="fas fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 text-sm pointer-events-none"
              />
              <input
                aria-label="Search messages"
                class="w-full pl-9 pr-8 py-2 text-sm border border-gray-300 dark:border-gray-600 rounded-xl focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-white transition-all"
                placeholder="Search messages..."
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="flex-1 overflow-y-auto p-3 md:p-4 lg:p-6 space-y-3 md:space-y-4 min-h-0 scroll-smooth overscroll-contain"
        >
          <div
            class="flex justify-start gap-2 group animate-fade-in-up"
          >
            <div
              class="relative flex-shrink-0 hidden sm:block self-end mb-5"
            >
              <div
                class="w-8 h-8 text-xs rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
              >
                O
              </div>
            </div>
            <div
              class="max-w-[85%] sm:max-w-xs md:max-w-sm lg:max-w-md xl:max-w-lg order-1"
            >
              <p
                class="text-xs text-gray-600 dark:text-gray-400 mb-1 ml-2 truncate font-medium"
              >
                otheruser
              </p>
              <div
                class="relative"
              >
                <div
                  class="px-3 py-2 md:px-4 md:py-2.5 shadow-sm bg-white dark:bg-gray-700 text-gray-900 dark:text-white border border-gray-200 dark:border-gray-600 rounded-2xl rounded-bl-md"
                >
                  <p
                    class="break-words whitespace-pre-wrap text-sm md:text-base leading-relaxed"
                  >
                    Hello!
                  </p>
                </div>
              </div>
              <p
                class="text-xs text-gray-500 dark:text-gray-400 mt-1 ml-2 flex items-center gap-1"
              >
                1/15/2024
              </p>
            </div>
          </div>
          <div
            class="flex justify-end gap-2 group animate-fade-in-up"
          >
            <div
              class="max-w-[85%] sm:max-w-xs md:max-w-sm lg:max-w-md xl:max-w-lg order-2"
            >
              <div
                class="relative"
              >
                <div
                  class="px-3 py-2 md:px-4 md:py-2.5 shadow-sm bg-gradient-to-br from-blue-600 to-blue-700 text-white rounded-2xl rounded-br-md"
                >
                  <p
                    class="break-words whitespace-pre-wrap text-sm md:text-base leading-relaxed"
                  >
                    Hi there!
                  </p>
                </div>
                <button
                  aria-label="Delete message"
                  class="absolute -right-8 md:-right-10 top-1/2 -translate-y-1/2 opacity-0 group-hover:opacity-100 transition-all w-7 h-7 flex items-center justify-center text-red-500 hover:text-red-600 hover:bg-red-50 dark:hover:bg-red-900/30 rounded-full touch-manipulation"
                  title="Delete message"
                  type="button"
                >
                  <i
                    class="fas fa-trash text-xs"
                  />
                </button>
              </div>
              <p
                class="text-xs text-gray-500 dark:text-gray-400 mt-1 ml-2 flex items-center gap-1"
              >
                1/15/2024
                <i
                  class="fas fa-check text-blue-400 text-[10px]"
                  title="Sent"
                />
              </p>
            </div>
          </div>
          <div
            class="h-1"
          />
        </div>
        <div
          class="bg-white dark:bg-gray-800 border-t border-gray-200 dark:border-gray-700 p-2 md:p-3 lg:p-4 flex-shrink-0 safe-area-inset-bottom"
        >
          <form
            class="flex items-end gap-2"
          >
            <input
              accept="image/*"
              class="hidden"
              tabindex="-1"
              type="file"
            />
            <button
              aria-label="Upload photo"
              class="w-10 h-10 md:w-11 md:h-11 flex items-center justify-center text-gray-500 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 hover:bg-gray-100 dark:hover:bg-gray-700 active:bg-gray-200 dark:active:bg-gray-600 rounded-full transition-colors flex-shrink-0 touch-manipulation"
              title="Upload photo"
              type="button"
            >
              <i
                class="fas fa-image text-lg"
              />
            </button>
            <div
              class="flex-1 min-w-0 relative"
            >
              <input
                aria-label="Message input"
                class="w-full px-4 py-2.5 md:py-3 border border-gray-300 dark:border-gray-600 rounded-full focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-white text-sm md:text-base transition-all"
                placeholder="Type a message..."
                type="text"
                value=""
              />
            </div>
            <button
              aria-label="Send"
              class="w-10 h-10 md:w-11 md:h-11 flex items-center justify-center bg-blue-600 text-white rounded-full hover:bg-blue-700 active:bg-blue-800 disabled:opacity-50 disabled:cursor-not-allowed transition-all flex-shrink-0 shadow-sm hover:shadow-md touch-manipulation"
              disabled=""
              type="submit"
            >
              <i
                class="fas fa-paper-plane"
              />
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - with error 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="modern-stat-badge"
            style="background: rgba(239, 68, 68, 0.1); border-color: rgba(239, 68, 68, 0.2);"
          >
            <i
              class="fas fa-exclamation-triangle text-red-500 mr-2"
            />
            <span
              class="hidden sm:inline"
            >
              Disconnected
            </span>
            <span
              class="sm:hidden"
            >
              Offline
            </span>
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="mt-2 md:mt-3 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-xl p-3 md:p-4 animate-fade-in"
      >
        <div
          class="flex items-start justify-between gap-3"
          style="margin: 1rem;"
        >
          <div
            class="flex items-start gap-2 md:gap-3 flex-1 min-w-0"
          >
            <div
              class="w-8 h-8 md:w-10 md:h-10 bg-blue-100 dark:bg-blue-800/50 rounded-full flex items-center justify-center flex-shrink-0"
            >
              <i
                class="fas fa-bell text-blue-600 dark:text-blue-400 text-sm md:text-base"
              />
            </div>
            <div
              class="flex-1 min-w-0 pt-1"
            >
              <p
                class="text-sm md:text-base font-medium text-blue-900 dark:text-blue-100"
              >
                Enable notifications for new messages
              </p>
              <p
                class="text-xs md:text-sm text-blue-700 dark:text-blue-300 mt-1 line-clamp-2"
              >
                Get notified when you receive new messages while away
              </p>
            </div>
          </div>
          <div
            class="flex items-center gap-2 flex-shrink-0"
          >
            <button
              class="btn-apple px-3 md:px-4 py-1.5 md:py-2 text-xs md:text-sm font-medium bg-blue-600 text-white rounded-lg hover:bg-blue-700 active:bg-blue-800 transition-colors touch-manipulation"
              type="button"
            >
              Enable
            </button>
            <button
              aria-label="Dismiss"
              class="w-8 h-8 flex items-center justify-center text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 hover:bg-blue-100 dark:hover:bg-blue-800/50 rounded-full transition-colors touch-manipulation"
              type="button"
            >
              <i
                class="fas fa-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-72 lg:w-80 xl:w-96 border-r border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 overflow-y-auto flex-shrink-0 scroll-smooth overscroll-contain flex flex-col"
      >
        <div
          class="flex-1 divide-y divide-gray-200 dark:divide-gray-700"
        >
          <button
            class="w-full p-3 md:p-4 text-left hover:bg-gray-50 dark:hover:bg-gray-700/50 active:bg-gray-100 dark:active:bg-gray-700 transition-colors touch-manipulation border-l-3 border-l-transparent"
            type="button"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="relative "
              >
                <div
                  class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                >
                  O
                </div>
                <span
                  class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                  title="online"
                />
              </div>
              <div
                class="flex-1 min-w-0"
              >
                <div
                  class="flex items-center justify-between gap-2"
                >
                  <span
                    class="font-semibold text-gray-900 dark:text-white truncate text-sm md:text-base"
                  >
                    otheruser
                  </span>
                  <span
                    class="text-xs text-gray-500 dark:text-gray-400 flex-shrink-0"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="flex items-center justify-between gap-2 mt-0.5"
                >
                  <p
                    class="text-xs md:text-sm text-gray-600 dark:text-gray-400 truncate"
                  >
                    <span
                      class="font-medium"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="px-2 py-0.5 bg-blue-600 text-white text-xs font-medium rounded-full flex-shrink-0 min-w-[1.25rem] text-center"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col bg-gray-50 dark:bg-gray-900 overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="flex-1 flex items-center justify-center p-6"
        >
          <div
            class="text-center max-w-sm"
          >
            <div
              class="w-20 h-20 md:w-24 md:h-24 bg-gray-200 dark:bg-gray-800 rounded-full flex items-center justify-center mx-auto mb-4"
            >
              <i
                class="fas fa-comment-dots text-3xl md:text-4xl text-gray-400 dark:text-gray-600"
              />
            </div>
            <p
              class="text-base md:text-lg font-medium text-gray-600 dark:text-gray-400 mb-2"
            >
              Select a chat to start messaging
            </p>
            <p
              class="text-sm text-gray-500 dark:text-gray-500"
            >
              Select a conversation from the list or start a new chat
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="btn-danger-glass fixed bottom-20 md:bottom-4 left-4 right-4 md:left-auto md:right-4 md:max-w-sm bg-red-600 text-white px-4 py-3 rounded-xl shadow-lg flex items-center gap-3 animate-slide-up z-50"
    >
      <div
        class="w-8 h-8 bg-white/20 rounded-full flex items-center justify-center flex-shrink-0"
      >
        <i
          class="fas fa-exclamation-circle"
        />
      </div>
      <p
        class="flex-1 text-sm"
      >
        Connection failed
      </p>
    </div>
  </div>
</div>
`;
